<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pre_user_profile">
        <EditTextPreference
        android:title="@string/pre_user_name"
        android:summary="@string/pre_user_name_summary"
        android:key="prefUserName"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pre_report">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pre_send_report_summary"
            android:title="@string/pre_send_report"/>
        <ListPreference
            android:key="prefSyncFrequency"
            android:summary="@string/pre_sync_frequency_summary"
            android:title="@string/pre_sync_frequency"
            android:entries="@array/syncFrequency"
            android:entryValues="@array/syncFrequencyValues"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pre_about">

        <PreferenceScreen
            android:title="@string/pre_about_web"
            android:summary="@string/pre_about_web_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://developer.android.com"/>
            </PreferenceScreen>
        </PreferenceCategory>

</PreferenceScreen>